Fixed fiter spacings

--- a/client/src/pages/FindPartner/FindPartner.scss
+++ b/client/src/pages/FindPartner/FindPartner.scss
@@ -12,7 +12,7 @@
         min-height: 100vh;
         background: white;
         box-shadow: 0 0 20px rgba(0,0,0,0.1);
-        padding: 20px;
+        padding: 30px 30px;
         border-radius: 20px;
 
         .categories {
@@ -20,7 +20,7 @@
                 margin-bottom: 15px;
             }
             select {
-                margin-bottom: 15px;
+                margin-bottom: 25px;
                 padding: 7px 15px;
                 width: calc(100% - 60px);
                 font-size: 16px;
